--- a/sample-viewer/src/app/dataset/dataset.component.html
+++ b/sample-viewer/src/app/dataset/dataset.component.html
@@ -9,35 +9,32 @@
     <!-- <app-filter-files [datasets]="datasets"></app-filter-files> -->
   </div>
 
-  <div class="grid-container">
+  <div class="container dataset-list">
+    <!-- DATASET LOOP -->
+    <div class="container dataset" *ngFor="let dataset of datasets">
+      <div class="dataset-header">
+        <div class="container container-header">
 
-    <div class="grid-item dataset-list">
-      <!-- DATASET LOOP -->
-      <div class="container dataset" *ngFor="let dataset of datasets">
-        <div class="dataset-header">
-          <div class="container container-header">
-
-            <div class="container container-title">
-              <div [ngClass]="[dataset.identifier, dataset.identifier + '-icon', 'expt-type', 'mat-shadow']">
-                <svg-icon [icon]="dataset.identifier"></svg-icon>
-              </div>
-
-              <h4 class="container-column"><a [routerLink]="['/dataset', dataset.identifier]">{{dataset.name}}</a>
-                <div class="keyword-container container">
-                  <span class="keyword" *ngFor="let keyword of dataset.keywords">{{keyword}}</span>
-                </div>
-              </h4>
+          <div class="container container-title">
+            <div [ngClass]="[dataset.identifier, dataset.identifier + '-icon', 'expt-type', 'mat-shadow', 'dataset-icon']">
+              <svg-icon [icon]="dataset.identifier"></svg-icon>
             </div>
-          </div>
 
-
-          <div class="dataset-description">
-            {{dataset.description}}
+            <h4 class="container-column"><a [routerLink]="['/dataset', dataset.identifier]">{{dataset.name}}</a>
+              <div class="keyword-container container">
+                <span class="keyword" *ngFor="let keyword of dataset.keywords">{{keyword}}</span>
+              </div>
+            </h4>
           </div>
         </div>
 
-        <app-dataset-summary [dataset]="dataset"></app-dataset-summary>
+
+        <div class="dataset-description">
+          {{dataset.description}}
+        </div>
       </div>
+
+      <app-dataset-summary [dataset]="dataset"></app-dataset-summary>
     </div>
 
   </div>
