pull out patient summary data

--- a/sample-viewer/src/app/dataset/dataset-summary/dataset-summary.component.html
+++ b/sample-viewer/src/app/dataset/dataset-summary/dataset-summary.component.html
@@ -11,7 +11,8 @@
 
     <div id="cohort-count">
       <h4 class="filter-label">cohort</h4>
-      <app-mini-donut [data]="viruses" [height]="65" [margin]="{ top: 2, bottom: 2, left: 2, right: 125 }" [cohorts]="all_cohorts" [filterable]="false"></app-mini-donut>
+      <app-mini-donut [data]="dataset.counts.cohorts" [height]="65"
+      [margin]="{ top: 2, bottom: 2, left: 2, right: 125 }" [cohorts]="dataset.counts.all_cohorts" [filterable]="false"></app-mini-donut>
     </div>
   </div>
 
@@ -25,7 +26,7 @@
 
   <div class="grid-item grid-column-container" id="outcome-count">
     <h4 class="filter-label">outcome</h4>
-    <app-mini-barplot [data]="outcomes" [height]="40" [width]="70" [options]="all_outcomes" [filterable]="false"></app-mini-barplot>
+    <app-mini-barplot [data]="dataset.counts.outcomes" [height]="40" [width]="70" [options]="dataset.counts.all_outcomes" [filterable]="false"></app-mini-barplot>
   </div>
 
   <div class="grid-item grid-row-container" id="year-file-count">
