--- a/sample-viewer/src/app/dataset/dataset-summary/dataset-summary.component.html
+++ b/sample-viewer/src/app/dataset/dataset-summary/dataset-summary.component.html
@@ -32,8 +32,9 @@
   <div class="grid-item grid-row-container" id="year-file-count">
     <div id="year-count" class="grid-column-container">
       <h4 class="filter-label">year</h4>
-      <app-filterable-histogram [data]="years" [xDomain]="yearDomain" [filterable]="false" [height]="40" [width]="80" [min_width_unknown]="0" [windsorized]="true" [filter_title]="'uniqueid'"></app-filterable-histogram>
+      <app-filterable-histogram [data]="dataset.counts.years" [xDomain]="dataset.counts.yearDomain" [filterable]="false" [height]="40" [width]="80" [min_width_unknown]="0" [windsorized]="true" [filter_title]="'uniqueid'"></app-filterable-histogram>
     </div>
+
     <div id="file-count" class="grid-column-container">
       <h4 class="filter-label">file type</h4>
       <app-mini-barplot [data]="files" [height]="40" [width]="40" [options]="all_files" [filterable]="false"></app-mini-barplot>
