--- a/sample-viewer/src/app/dataset/dataset-summary/dataset-summary.component.scss
+++ b/sample-viewer/src/app/dataset/dataset-summary/dataset-summary.component.scss
@@ -42,3 +42,7 @@ $container-margin: 10px;
 #year-count {
   margin-right: $container-margin;
 }
+
+#country-count .grid-row-container {
+  align-items: center;
+}
