--- a/sample-viewer/src/sass/_variables.scss
+++ b/sample-viewer/src/sass/_variables.scss
@@ -33,6 +33,7 @@ $grey-250: #bac0c5;
 $grey-200: #d3d9de;
 $grey-225: mix($grey-250, $grey-200);
 $grey-100: lighten(#d3d9de, 5%);
+$grey-150: mix($grey-200, $grey-100);
 $grey-50: #eef1f4;
 
 
