--- a/sample-viewer/src/app/dataset-page/dataset-page.component.html
+++ b/sample-viewer/src/app/dataset-page/dataset-page.component.html
@@ -7,22 +7,34 @@
     <div class="dataset-content">
       <a [routerLink]="'/dataset'" class="back-button">Return to all datasets</a>
 
-      <div class="dataset-header" id="summary">
-        <h2>
-          <a>{{ dataset.name }}</a>
-          <!-- <a (click)="selectDataset($event, dataset)" [matTooltip]="'view metadata for ' + dataset.name + ' dataset'">{{ dataset.name }}</a> -->
-          <div class="keyword-container container">
-            <span class="keyword" *ngFor="let keyword of dataset.keywords">{{keyword}}</span>
+      <div class="dataset-header container" id="summary">
+        <div class="dataset-header">
+          <div class="container container-header">
+
+            <div class="container container-title">
+              <div [ngClass]="[dataset.identifier, dataset.identifier + '-icon', 'expt-type', 'mat-shadow', 'dataset-icon']">
+                <a [routerLink]="['/dataset', dataset.identifier]">
+                  <!-- <svg-icon [icon]="dataset.identifier"></svg-icon> -->
+                </a>
+              </div>
+
+              <h2 class="container-column">{{dataset.name}}
+                <div class="keyword-container container">
+                  <span class="keyword" *ngFor="let keyword of dataset.keywords">{{keyword}}</span>
+                </div>
+              </h2>
+            </div>
           </div>
-        </h2>
 
-        <div class="dataset-description">
-          {{dataset.description}}
+          <div class="updated">
+            updated {{dataset.dateModified ? (dataset.dateModified | date: 'd MMMM yyyy') : ': unknown'}}
+          </div>
+          <div class="dataset-description">
+            {{dataset.description}}
+          </div>
         </div>
 
-        <div class="updated">
-          updated {{dataset.dateModified ? (dataset.dateModified | date: 'd MMMM yyyy') : ': unknown'}}
-        </div>
+        <app-dataset-summary [dataset]="dataset"></app-dataset-summary>
       </div>
 
       <app-dataset-source [sources]="dataset.source"></app-dataset-source>
