--- a/sample-viewer/src/app/dataset-page/dataset-page.component.scss
+++ b/sample-viewer/src/app/dataset-page/dataset-page.component.scss
@@ -29,6 +29,14 @@
   overflow-x: hidden;
 }
 
-.dataset-description {
+.dataset-description, .dataset-name {
   flex: 1;
+}
+
+h2.container-title {
+  margin-top: 0;
+}
+
+.dataset-header {
+  margin-top: 0.75em;
 }
