--- a/sample-viewer/src/app/dataset-page/dataset-page.component.html
+++ b/sample-viewer/src/app/dataset-page/dataset-page.component.html
@@ -12,7 +12,7 @@
           <div class="container container-header">
 
             <h2 class="container-column container-title">
-              <div class="container">
+              <div class="container container-dataset-name">
                 <div [ngClass]="[dataset.identifier, dataset.identifier + '-icon', 'expt-type', 'mat-shadow', 'dataset-icon']">
                   <svg-icon [icon]="dataset.identifier"></svg-icon>
                 </div>
