--- a/sample-viewer/src/app/dataset-page/dataset-page.component.scss
+++ b/sample-viewer/src/app/dataset-page/dataset-page.component.scss
@@ -29,6 +29,10 @@
   overflow-x: hidden;
 }
 
+.container-dataset-name {
+  align-items: center;
+}
+
 .dataset-description, .dataset-name {
   flex: 1;
 }
