re-add HLA summary without patient counts

--- a/sample-viewer/src/app/hla/hla-page.component.html
+++ b/sample-viewer/src/app/hla/hla-page.component.html
@@ -1,7 +1,7 @@
 <div class="dataset-container hla-container">
   <app-dataset-page></app-dataset-page>
 
-  <!-- <app-hla-summary></app-hla-summary> -->
+  <app-hla-summary></app-hla-summary>
 
   <app-hla-comparison></app-hla-comparison>
 </div>
