--- a/sample-viewer/src/app/dataset/dataset.component.scss
+++ b/sample-viewer/src/app/dataset/dataset.component.scss
@@ -63,11 +63,11 @@ h4 {
 }
 
 .dataset-icon {
-  margin-top: auto;
+  // margin-top: auto;
 }
 
 .container-title {
-  // align-items: center;
+  align-items: center;
 }
 
 
