--- a/sample-viewer/src/app/filters/filter-experiment/filter-experiment.component.html
+++ b/sample-viewer/src/app/filters/filter-experiment/filter-experiment.component.html
@@ -4,8 +4,8 @@
   <div class="expt-container">
     <div class="filter-pair expt-type filter-expt" *ngFor="let expt of expts; let idx = index" (click)="filterExpt(idx)"
     [ngClass]="{'disabled' : expt.disabled}">
-      <svg-icon [icon]="expt.key" [class]="expt.key + '-icon'"></svg-icon>
-      <div class="expt-name">{{ expt.name }}</div>
+      <svg-icon [icon]="expt.term" [class]="expt.key + '-icon'"></svg-icon>
+      <div class="expt-name">{{ expt.dataset_name }}</div>
       <!-- <div class="file-count">{{ expt.value }}</div> -->
     </div>
   </div>
