--- a/sample-viewer/src/app/filters/filter-experiment/filter-experiment.component.html
+++ b/sample-viewer/src/app/filters/filter-experiment/filter-experiment.component.html
@@ -2,9 +2,9 @@
   <h4 class="filter-label">experiment data</h4>
 
   <div class="expt-container">
-    <div class="filter-pair expt-type filter-expt" *ngFor="let expt of expts; let idx = index" (click)="filterExpt(idx)"
+    <div class="filter-pair expt-type filter-expt" [class]="expt.term" *ngFor="let expt of expts; let idx = index" (click)="filterExpt(idx)"
     [ngClass]="{'disabled' : expt.disabled}">
-      <svg-icon [icon]="expt.term" [class]="expt.key + '-icon'"></svg-icon>
+      <svg-icon [icon]="expt.term"></svg-icon>
       <div class="expt-name">{{ expt.dataset_name }}</div>
       <!-- <div class="file-count">{{ expt.value }}</div> -->
     </div>
