--- a/sample-viewer/src/app/filters/filter-experiment/filter-experiment.component.scss
+++ b/sample-viewer/src/app/filters/filter-experiment/filter-experiment.component.scss
@@ -26,8 +26,8 @@ svg-icon {
   margin-right: 1.5em;
   margin-bottom: 1em;
   // background: #f7ffcd;
-  background-color: lighten($grey-200, 10%);
-  padding: 5px 8px 5px 5px;
+  // background-color: lighten($grey-200, 10%);
+  // padding: 5px 8px 5px 5px;
   border-radius: 5px;
   &:hover {
     background-color: $grey-100;
