--- a/sample-viewer/src/app/home/home.component.html
+++ b/sample-viewer/src/app/home/home.component.html
@@ -56,7 +56,7 @@
 
       <div class="counts" id="dataset-counts" *ngIf="experimentCount.length > 0">
         <ng-container *ngFor="let expt of experimentCount">
-          <a [routerLink]="['/dataset', expt.link]">
+          <a [routerLink]="['/dataset', expt.term]">
             <div class="container count-pair">
               <div class="count-value">
                 {{expt.count}}
@@ -173,8 +173,8 @@
         More about our data
       </div>
       <div class="description">
-        <ng-container *ngIf="releaseVersion && releaseSummary && releaseSummary.length > 0">
-          <a routerLink="/release-notes" class="link">Version {{releaseVersion}}</a> was released on {{releaseSummary[0].datePublished | date: "d MMMM y"}}.
+        <ng-container *ngIf="releaseVersion && releaseNotes && releaseNotes.length > 0">
+          <a routerLink="/release-notes" class="link">Version {{releaseVersion}}</a> was released on {{releaseNotes[0].datePublished | date: "d MMMM y"}}.
         </ng-container>
         See our <a routerLink="/documentation" class="link">documentation</a> section for more info about
         our data and their limitations.
@@ -195,21 +195,3 @@
     </div>
 
   </div>
-
-  <!-- <app-compare-cohorts></app-compare-cohorts>
-
-<div class="main-graph">
-  <app-allele-circle-packing [data]="alleleCount" [scale]="1" class="main-packing"></app-allele-circle-packing>
-</div>
-<div class="main-graph">
-  <app-allele-circle-packing [data]="alleleCount" [scale]="0.5" class="unique-alleles"></app-allele-circle-packing>
-</div>
-<div class="main-graph">
-  <app-allele-circle-packing [data]="alleleCount" [scale]="0.5" class="novel-alleles"></app-allele-circle-packing>
-</div>
-
-<app-download-btn [data]="test" filenamePart="Ebola" filetype="viral sequences"></app-download-btn>
-
-<app-download-aligned-sequences></app-download-aligned-sequences> -->
-
-  <!-- <app-beeswarm></app-beeswarm> -->
