translate ID --> name

--- a/sample-viewer/src/app/home/home.component.html
+++ b/sample-viewer/src/app/home/home.component.html
@@ -62,7 +62,7 @@
                 {{expt.count}}
               </div>
               <div class="count-label">
-                {{expt.term}} experiments
+                {{expt.dataset_name}} experiments
               </div>
             </div>
           </a>
