--- a/sample-viewer/src/app/patient-page/patient-serology/patient-serology.component.html
+++ b/sample-viewer/src/app/patient-page/patient-serology/patient-serology.component.html
@@ -35,7 +35,7 @@
   </div>
 
   <div class="serology-files">
-    <app-file-list datasetID="systems-serology" [patientID]="patientID"></app-file-list>
+    <app-file-list [datasetID]="datasetID" [patientID]="patientID"></app-file-list>
   </div>
 </ng-container>
 
