--- a/sample-viewer/src/styles.scss
+++ b/sample-viewer/src/styles.scss
@@ -1,7 +1,7 @@
 // Custom color specifications
 @import './sass/variables.scss'; // custom variables, usually colors
 // @import 'sass/variables'; // custom variables, usually colors
-@import '/sass/material-theme'; // @import 'custom_colors';
+@import './sass/material-theme.scss'; // @import 'custom_colors';
 @import "~@ng-select/ng-select/themes/default.theme.css"; // Fonts
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,700,800|Material+Icons'); // --- Basics ---
 
