--- a/sample-viewer/src/app/sample/sample.component.scss
+++ b/sample-viewer/src/app/sample/sample.component.scss
@@ -8,13 +8,13 @@
     -webkit-text-stroke-width: 1px;
   }
 
-  /deep/ .dwnld-btn {
+  :host ::ng-deep .dwnld-btn {
     background: lighten(accent-redder(200), 14%);
     border: 1px solid accent-redder(500);
     color: accent-redder(A700);
   }
 }
 
-/deep/ .dwnld-btn.mat-button.mat-stroked-button .mat-button-focus-overlay {
+:host ::ng-deep .dwnld-btn.mat-button.mat-stroked-button .mat-button-focus-overlay {
   background-color: #fdb09b66;
 }
