--- a/sample-viewer/src/app/add-samples/add-samples.component.scss
+++ b/sample-viewer/src/app/add-samples/add-samples.component.scss
@@ -8,7 +8,7 @@
     -webkit-text-stroke-width: 1px;
   }
 
-  /deep/ .dwnld-btn {
+:host ::ng-deep .dwnld-btn {
     background: lighten(accent-redder(200), 14%);
     border: 1px solid accent-redder(500);
     color: accent-redder(A700);
