--- a/sample-viewer/src/app/filters/filter-elisas/filter-elisas.component.scss
+++ b/sample-viewer/src/app/filters/filter-elisas/filter-elisas.component.scss
@@ -67,7 +67,7 @@ th {
   width: 75px;
 }
 
-/deep/ .mat-form-field-appearance-fill .mat-form-field-flex {
+:host ::ng-deep .mat-form-field-appearance-fill .mat-form-field-flex {
   background: lighten($cvisb-bright, 47%) !important;
   border-radius: 4px 4px 0 0;
   padding: 0 0.50em 0 0.75em !important;
