--- a/sample-viewer/src/app/hla/hla-comparison/hla-comparison.component.scss
+++ b/sample-viewer/src/app/hla/hla-comparison/hla-comparison.component.scss
@@ -6,7 +6,7 @@
   margin-top: 3px;
 }
 
-/deep/ .cohort-form .mat-form-field-flex {
+:host ::ng-deep .cohort-form .mat-form-field-flex {
   background: accent(50);
   padding: 5px 10px 0px 10px;
   border-radius: 3px;
