--- a/sample-viewer/src/app/patient/patient.component.scss
+++ b/sample-viewer/src/app/patient/patient.component.scss
@@ -8,14 +8,14 @@
     -webkit-text-stroke-width: 1px;
   }
 
-  /deep/ .dwnld-btn {
+  :host ::ng-deep .dwnld-btn {
     background: lighten($ebola-lt, 10%);
     border: 1px solid $ebola-color;
     color: $ebola-color;
   }
 }
 
-/deep/ .dwnld-btn.mat-button.mat-stroked-button .mat-button-focus-overlay,
+:host ::ng-deep .dwnld-btn.mat-button.mat-stroked-button .mat-button-focus-overlay,
 {
   background-color: #c2185b25;
 }
