--- a/sample-viewer/src/app/dataset-page/dataset-page.component.html
+++ b/sample-viewer/src/app/dataset-page/dataset-page.component.html
@@ -35,6 +35,7 @@
         </div>
 
         <app-dataset-summary [dataset]="dataset" id="summary"></app-dataset-summary>
+        <app-dataset-citation [dataset]="dataset" id="citation"></app-dataset-citation>
       </div>
 
       <app-dataset-source [sources]="dataset.source"></app-dataset-source>
