--- a/sample-viewer/src/app/dataset-page/curated-alignments/curated-alignments.component.scss
+++ b/sample-viewer/src/app/dataset-page/curated-alignments/curated-alignments.component.scss
@@ -1,13 +1,13 @@
 @import '../../../sass/variables.scss';
 
 .curation-explanation {
-  background: lighten($lassa-lt, 35%);
+  background: lighten($lassa-md, 52%);
   padding: 15px;
 
   & h3 {
     text-transform: uppercase;
     font-weight: 400;
-    color: $ebola-md;
+    color: $lassa-md;
     margin: 0;
   }
 
@@ -17,12 +17,29 @@
 
   & h5 {
     margin: 0;
-    color: $grey-500;
+    color: $grey-400;
   }
 }
 
 .methodology-description {
   font-size: 0.85em;
   margin-bottom: 0;
-  color: $grey-600;
+  color: $grey-500;
+}
+
+.methodology-header {
+  padding: 0 !important;
+}
+
+#methodology {
+    box-shadow: none !important;
+    background: inherit !important;
+}
+
+section#download-alignments {
+    margin-bottom: 12px;
+}
+
+:host ::ng-deep .mat-expansion-panel-body {
+    padding: 0;
 }
