--- a/sample-viewer/src/app/dataset-page/curated-alignments/curated-alignments.component.html
+++ b/sample-viewer/src/app/dataset-page/curated-alignments/curated-alignments.component.html
@@ -13,7 +13,7 @@
   </section>
 
   <mat-expansion-panel id="methodology">
-    <mat-expansion-panel-header [collapsedHeight]="expansionPanelHeight" [expandedHeight]="expansionPanelHeight" [expanded]="panelOpenState" (opened)="panelOpenState = true" (closed)="panelOpenState = false" class="methodology-header">
+    <mat-expansion-panel-header [collapsedHeight]="expansionPanelHeight" [expandedHeight]="expansionPanelHeight" (opened)="panelOpenState = true" (closed)="panelOpenState = false" class="methodology-header">
       <mat-panel-title class="methodology-title">
         <h5>{{panelOpenState ? "Alignment methodology" : "View alignment methodology"}}</h5>
       </mat-panel-title>
