--- a/sample-viewer/src/app/dataset-page/dataset-source/dataset-source.component.html
+++ b/sample-viewer/src/app/dataset-page/dataset-source/dataset-source.component.html
@@ -12,20 +12,29 @@
     <span class="text">percent of experiments from source</span>
   </div>
 
-  <div *ngFor="let source of sources" class="container dataset-source-container" *ngTemplateOutlet="sources; context:source">
-  </div>
-  
+
+  [ngTemplateOutlet]="flatData" [ngTemplateOutletContext]="{ data: location, key: loc_key }"
+
+  <ng-container *ngFor="let source of sources" class="container dataset-source-container">
+    <div *ngTemplateOutlet="sources; context:source">
+    </div>
+  </ng-container>
+
   <div class="container dataset-source-container">
-    <div *ngFor="let source of sources_left" class="container dataset-source-container" *ngTemplateOutlet="sources; context:source">
-    </div>
-    <div *ngFor="let source of sources_right" class="container dataset-source-container" *ngTemplateOutlet="sources; context:source">
-    </div>
+    <ng-container *ngFor="let source of sources_left" class="container dataset-source-container">
+      <div *ngTemplateOutlet="sources; context:source">
+      </div>
+    </ng-container>
+    <ng-container *ngFor="let source of sources_right" class="container dataset-source-container">
+      <div *ngTemplateOutlet="sources; context:source">
+      </div>
+    </ng-container>
   </div>
-  </mat-expansion-panel>
+</mat-expansion-panel>
 
 <ng-template #source let-source="source">
   <div class="source-percent" [matTooltip]="source.count === 1 ? source.count + ' experiment' : source.count + ' experiments'"
-  [ngStyle]="{ 'background': colorScale(source.percent), 'color': source.percent > textColorThreshold ? 'white' : '#212529' }">
+    [ngStyle]="{ 'background': colorScale(source.percent), 'color': source.percent > textColorThreshold ? 'white' : '#212529' }">
     {{ source.percent | percent : 0 }}
   </div>
 
